{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 227,
  "lineage": "7782744b-eceb-66cb-1054-036231c2a072",
  "resources": [
    {
      "module": "module.cluster.module.eks_with_node_group.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:835776587202:security-group/sg-040fe6069b4b9459f",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-040fe6069b4b9459f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3164385ec7b845f"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "platformwale-cluster-20240206034731788100000009",
            "name_prefix": "platformwale-cluster-",
            "owner_id": "835776587202",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "platformwale-cluster"
            },
            "tags_all": {
              "Name": "platformwale-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0261abb4939096308"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.eks_with_node_group.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:835776587202:security-group/sg-0d3164385ec7b845f",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3164385ec7b845f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040fe6069b4b9459f"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040fe6069b4b9459f"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040fe6069b4b9459f"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040fe6069b4b9459f"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040fe6069b4b9459f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-040fe6069b4b9459f"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "platformwale-node-20240206034731779400000008",
            "name_prefix": "platformwale-node-",
            "owner_id": "835776587202",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "platformwale-node",
              "kubernetes.io/cluster/platformwale": "owned"
            },
            "tags_all": {
              "Name": "platformwale-node",
              "kubernetes.io/cluster/platformwale": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0261abb4939096308"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.eks_with_node_group.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4037050404",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-040fe6069b4b9459f",
            "security_group_rule_id": "sgr-09c7710484c1235c2",
            "self": false,
            "source_security_group_id": "sg-0d3164385ec7b845f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.cluster",
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.node",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.eks_with_node_group.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1035067243",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0d3164385ec7b845f",
            "security_group_rule_id": "sgr-06d9d4def22224f05",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.cluster",
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.node",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4130692076",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3164385ec7b845f",
            "security_group_rule_id": "sgr-08037cae43d88da9a",
            "self": false,
            "source_security_group_id": "sg-040fe6069b4b9459f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.cluster",
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.node",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1871764171",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3164385ec7b845f",
            "security_group_rule_id": "sgr-0efbf523f33f8017a",
            "self": false,
            "source_security_group_id": "sg-040fe6069b4b9459f",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.cluster",
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.node",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2798828893",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3164385ec7b845f",
            "security_group_rule_id": "sgr-061cd3240e5a1be87",
            "self": false,
            "source_security_group_id": "sg-040fe6069b4b9459f",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.cluster",
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.node",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3046015356",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3164385ec7b845f",
            "security_group_rule_id": "sgr-0c545467b2d54d50d",
            "self": false,
            "source_security_group_id": "sg-040fe6069b4b9459f",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.cluster",
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.node",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3509564087",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3164385ec7b845f",
            "security_group_rule_id": "sgr-04707a902bde79ae3",
            "self": false,
            "source_security_group_id": "sg-040fe6069b4b9459f",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.cluster",
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.node",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2492241203",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3164385ec7b845f",
            "security_group_rule_id": "sgr-0217c4d8f90f28fde",
            "self": false,
            "source_security_group_id": "sg-040fe6069b4b9459f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.cluster",
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.node",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2186833230",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3164385ec7b845f",
            "security_group_rule_id": "sgr-0ec7d5ecde3a1ab1c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.cluster",
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.node",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-436111178",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3164385ec7b845f",
            "security_group_rule_id": "sgr-0b1a6ab590a3b6cec",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.cluster",
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.node",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3181454501",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0d3164385ec7b845f",
            "security_group_rule_id": "sgr-0d81d83754456a262",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.cluster",
            "module.cluster.module.eks_with_node_group.module.eks.aws_security_group.node",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:835776587202:network-acl/acl-0b42b87ac9c34d153",
            "default_network_acl_id": "acl-0b42b87ac9c34d153",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b42b87ac9c34d153",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "835776587202",
            "subnet_ids": [
              "subnet-0042d6a345ef90993",
              "subnet-0637937cdceff4719",
              "subnet-0adb0b11660bdc2fe",
              "subnet-0eab59bca50fffcb2",
              "subnet-0f80a31838e15d99f",
              "subnet-0fb422d076cfd5a40"
            ],
            "tags": {
              "Name": "platformwale-default"
            },
            "tags_all": {
              "Name": "platformwale-default"
            },
            "vpc_id": "vpc-0261abb4939096308"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:835776587202:route-table/rtb-021cb6c777a9d9e12",
            "default_route_table_id": "rtb-021cb6c777a9d9e12",
            "id": "rtb-021cb6c777a9d9e12",
            "owner_id": "835776587202",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "platformwale-default"
            },
            "tags_all": {
              "Name": "platformwale-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0261abb4939096308"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:835776587202:security-group/sg-02fd77a3d8fcc4635",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02fd77a3d8fcc4635",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "835776587202",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "platformwale-default"
            },
            "tags_all": {
              "Name": "platformwale-default"
            },
            "vpc_id": "vpc-0261abb4939096308"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0126b4379b6ec8200",
            "association_id": "eipassoc-0e48b4c25c08a38dd",
            "domain": "vpc",
            "id": "eipalloc-0126b4379b6ec8200",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-047ee57898e7fe8b8",
            "private_dns": "ip-10-0-0-53.ap-southeast-2.compute.internal",
            "private_ip": "10.0.0.53",
            "public_dns": "ec2-3-104-72-221.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.104.72.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "platformwale-ap-southeast-2a"
            },
            "tags_all": {
              "Name": "platformwale-ap-southeast-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_internet_gateway.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce86a0d14f34ef07",
            "association_id": "eipassoc-00e9c6578bef619e5",
            "domain": "vpc",
            "id": "eipalloc-0ce86a0d14f34ef07",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0d54995651bac6cdc",
            "private_dns": "ip-10-0-1-155.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.155",
            "public_dns": "ec2-13-239-94-16.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.239.94.16",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "platformwale-ap-southeast-2b"
            },
            "tags_all": {
              "Name": "platformwale-ap-southeast-2b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_internet_gateway.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f91ff06dfabcf4d",
            "association_id": "eipassoc-09942338360ed41dc",
            "domain": "vpc",
            "id": "eipalloc-00f91ff06dfabcf4d",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0ca59d44d101cc7d2",
            "private_dns": "ip-10-0-2-121.ap-southeast-2.compute.internal",
            "private_ip": "10.0.2.121",
            "public_dns": "ec2-13-238-46-20.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.238.46.20",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "platformwale-ap-southeast-2c"
            },
            "tags_all": {
              "Name": "platformwale-ap-southeast-2c"
            },
            "vpc": true
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_internet_gateway.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:835776587202:internet-gateway/igw-0d857ed673ed5882c",
            "id": "igw-0d857ed673ed5882c",
            "owner_id": "835776587202",
            "tags": {
              "Name": "platformwale"
            },
            "tags_all": {
              "Name": "platformwale"
            },
            "vpc_id": "vpc-0261abb4939096308"
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0126b4379b6ec8200",
            "association_id": "eipassoc-0e48b4c25c08a38dd",
            "connectivity_type": "public",
            "id": "nat-03c02dfcfad509efd",
            "network_interface_id": "eni-047ee57898e7fe8b8",
            "private_ip": "10.0.0.53",
            "public_ip": "3.104.72.221",
            "subnet_id": "subnet-0fb422d076cfd5a40",
            "tags": {
              "Name": "platformwale-ap-southeast-2a"
            },
            "tags_all": {
              "Name": "platformwale-ap-southeast-2a"
            }
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_eip.nat",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_internet_gateway.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_subnet.public",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce86a0d14f34ef07",
            "association_id": "eipassoc-00e9c6578bef619e5",
            "connectivity_type": "public",
            "id": "nat-04973d63cb9380a10",
            "network_interface_id": "eni-0d54995651bac6cdc",
            "private_ip": "10.0.1.155",
            "public_ip": "13.239.94.16",
            "subnet_id": "subnet-0042d6a345ef90993",
            "tags": {
              "Name": "platformwale-ap-southeast-2b"
            },
            "tags_all": {
              "Name": "platformwale-ap-southeast-2b"
            }
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_eip.nat",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_internet_gateway.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_subnet.public",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f91ff06dfabcf4d",
            "association_id": "eipassoc-09942338360ed41dc",
            "connectivity_type": "public",
            "id": "nat-0ce6978c01d828088",
            "network_interface_id": "eni-0ca59d44d101cc7d2",
            "private_ip": "10.0.2.121",
            "public_ip": "13.238.46.20",
            "subnet_id": "subnet-0637937cdceff4719",
            "tags": {
              "Name": "platformwale-ap-southeast-2c"
            },
            "tags_all": {
              "Name": "platformwale-ap-southeast-2c"
            }
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_eip.nat",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_internet_gateway.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_subnet.public",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00986c27de9fa45aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03c02dfcfad509efd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00986c27de9fa45aa",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_eip.nat",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_internet_gateway.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_nat_gateway.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_route_table.private",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_subnet.public",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fa3bbaca4307f7751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04973d63cb9380a10",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fa3bbaca4307f775",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_eip.nat",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_internet_gateway.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_nat_gateway.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_route_table.private",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_subnet.public",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c9712f677e189e971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ce6978c01d828088",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c9712f677e189e97",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_eip.nat",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_internet_gateway.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_nat_gateway.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_route_table.private",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_subnet.public",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d857ed673ed5882c",
            "id": "r-rtb-0ecced8f5f78ca69c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ecced8f5f78ca69c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_internet_gateway.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_route_table.public",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:835776587202:route-table/rtb-00986c27de9fa45aa",
            "id": "rtb-00986c27de9fa45aa",
            "owner_id": "835776587202",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03c02dfcfad509efd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "platformwale-private-ap-southeast-2a"
            },
            "tags_all": {
              "Name": "platformwale-private-ap-southeast-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0261abb4939096308"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:835776587202:route-table/rtb-0fa3bbaca4307f775",
            "id": "rtb-0fa3bbaca4307f775",
            "owner_id": "835776587202",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04973d63cb9380a10",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "platformwale-private-ap-southeast-2b"
            },
            "tags_all": {
              "Name": "platformwale-private-ap-southeast-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0261abb4939096308"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:835776587202:route-table/rtb-0c9712f677e189e97",
            "id": "rtb-0c9712f677e189e97",
            "owner_id": "835776587202",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ce6978c01d828088",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "platformwale-private-ap-southeast-2c"
            },
            "tags_all": {
              "Name": "platformwale-private-ap-southeast-2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0261abb4939096308"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:835776587202:route-table/rtb-0ecced8f5f78ca69c",
            "id": "rtb-0ecced8f5f78ca69c",
            "owner_id": "835776587202",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d857ed673ed5882c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "platformwale-public"
            },
            "tags_all": {
              "Name": "platformwale-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0261abb4939096308"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1f05a2dff1f4b6f",
            "route_table_id": "rtb-00986c27de9fa45aa",
            "subnet_id": "subnet-0adb0b11660bdc2fe"
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_route_table.private",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_subnet.private",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0200c3001f5768153",
            "route_table_id": "rtb-0fa3bbaca4307f775",
            "subnet_id": "subnet-0eab59bca50fffcb2"
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_route_table.private",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_subnet.private",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d027dc1fbf02693a",
            "route_table_id": "rtb-0c9712f677e189e97",
            "subnet_id": "subnet-0f80a31838e15d99f"
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_route_table.private",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_subnet.private",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc3bbec3dc44acca",
            "route_table_id": "rtb-0ecced8f5f78ca69c",
            "subnet_id": "subnet-0fb422d076cfd5a40"
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_route_table.public",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_subnet.public",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058a3f9902d97728f",
            "route_table_id": "rtb-0ecced8f5f78ca69c",
            "subnet_id": "subnet-0042d6a345ef90993"
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_route_table.public",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_subnet.public",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068855c532d506223",
            "route_table_id": "rtb-0ecced8f5f78ca69c",
            "subnet_id": "subnet-0637937cdceff4719"
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_route_table.public",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_subnet.public",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:835776587202:subnet/subnet-0adb0b11660bdc2fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adb0b11660bdc2fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835776587202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "platformwale-private-ap-southeast-2a"
            },
            "tags_all": {
              "Name": "platformwale-private-ap-southeast-2a"
            },
            "vpc_id": "vpc-0261abb4939096308"
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:835776587202:subnet/subnet-0eab59bca50fffcb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eab59bca50fffcb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835776587202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "platformwale-private-ap-southeast-2b"
            },
            "tags_all": {
              "Name": "platformwale-private-ap-southeast-2b"
            },
            "vpc_id": "vpc-0261abb4939096308"
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:835776587202:subnet/subnet-0f80a31838e15d99f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f80a31838e15d99f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835776587202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "platformwale-private-ap-southeast-2c"
            },
            "tags_all": {
              "Name": "platformwale-private-ap-southeast-2c"
            },
            "vpc_id": "vpc-0261abb4939096308"
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:835776587202:subnet/subnet-0fb422d076cfd5a40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb422d076cfd5a40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835776587202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "platformwale-public-ap-southeast-2a"
            },
            "tags_all": {
              "Name": "platformwale-public-ap-southeast-2a"
            },
            "vpc_id": "vpc-0261abb4939096308"
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:835776587202:subnet/subnet-0042d6a345ef90993",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0042d6a345ef90993",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835776587202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "platformwale-public-ap-southeast-2b"
            },
            "tags_all": {
              "Name": "platformwale-public-ap-southeast-2b"
            },
            "vpc_id": "vpc-0261abb4939096308"
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:835776587202:subnet/subnet-0637937cdceff4719",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0637937cdceff4719",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "835776587202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "platformwale-public-ap-southeast-2c"
            },
            "tags_all": {
              "Name": "platformwale-public-ap-southeast-2c"
            },
            "vpc_id": "vpc-0261abb4939096308"
          },
          "dependencies": [
            "module.cluster.module.vpc_with_subnets.data.aws_availability_zones.available",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc.this",
            "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.vpc_with_subnets.module.vpc_and_subnets",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:835776587202:vpc/vpc-0261abb4939096308",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b42b87ac9c34d153",
            "default_route_table_id": "rtb-021cb6c777a9d9e12",
            "default_security_group_id": "sg-02fd77a3d8fcc4635",
            "dhcp_options_id": "dopt-a7362fc0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0261abb4939096308",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021cb6c777a9d9e12",
            "owner_id": "835776587202",
            "tags": {
              "Name": "platformwale"
            },
            "tags_all": {
              "Name": "platformwale"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}